--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,26 +1,38 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: WalletInc # Your GitHub organization or username, where this repository lives
+repo: status # The name of this repository
+# user-agent: apratheek
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Dev SMS
+    url: $DEV_SMS
+  - name: Dev Membership
+    url: $DEV_MEMBERSHIP
+  - name: Dev Voucher
+    url: $DEV_VOUCHER
+    
+assignees: # Users to assign downtime issues
+  - apratheek
+  
+workflowSchedule:
+  graphs: "0 0 * * *"
+  responseTime: "0 23 * * *"
+  staticSite: "0 1 * * *"
+  summary: "0 0 * * *"
+  updateTemplate: "0 0 * * *"
+  updates: "0 3 * * *"
+  uptime: "*/15 * * * *"
 
 status-website:
+  # theme: light
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
+  # cname: walletinc.github.io
+  baseUrl: /status
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: WalletInc
+  introTitle: "WalletInc's Status Page"
+  introMessage: This is the status page that displays the status of all the microservices
   navbar:
     - title: Status
       href: /
