--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -25,8 +25,8 @@ status-website:
   # theme: light
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  # cname: walletinc.github.io
-  baseUrl: /status
+  cname: uptime.wallet.inc # walletinc.github.io
+  # baseUrl: /status
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: WalletInc
   introTitle: "WalletInc's Status Page"
