--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,8 +6,11 @@ repo: status # The name of this repository
 sites:
   - name: Administrative Portal
     url: $PROD_ADMIN_URL
+    maxResponseTime: 5000
+
   - name: API
     url: $PROD_API_URL
+    maxResponseTime: 5000
     
 assignees: # Users to assign downtime issues
   - apratheek
